Update module Booking, ExtraOrder